[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://res/fonts/ark_pixel.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/main_menu/menu_select.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="rect" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -200.0
margin_top = -90.0
margin_right = 200.0
margin_bottom = 110.0
alignment = 1
script = ExtResource( 3 )

[node name="1p_start" type="Button" parent="rect"]
margin_top = 58.0
margin_right = 400.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "1 Player"
flat = true

[node name="2p_start" type="Button" parent="rect"]
margin_top = 80.0
margin_right = 400.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 2 )
text = "2 Players"
flat = true

[node name="remote" type="Button" parent="rect"]
margin_top = 102.0
margin_right = 400.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Remote"
flat = true

[node name="menu" type="Button" parent="rect"]
margin_top = 124.0
margin_right = 400.0
margin_bottom = 142.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 2 )
text = "Menu"
flat = true

[node name="exit" type="Button" parent="rect"]
visible = false
margin_left = 120.0
margin_top = 106.0
margin_right = 281.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"
flat = true

[connection signal="pressed" from="rect/1p_start" to="." method="_on_1p_start_pressed"]
[connection signal="pressed" from="rect/2p_start" to="." method="_on_2p_start_pressed"]
[connection signal="pressed" from="rect/remote" to="." method="_on_remote_pressed"]
[connection signal="pressed" from="rect/menu" to="." method="_on_menu_pressed"]
